tests/errors/nested_unclosed.slpx
(putln "test")

(set x (int/add 5 10

(putln x)

